[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/game_start_music.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scripts/StartScreen.gd" type="Script" id=2]
[ext_resource path="res://Assets/BlastThemLogo.png" type="Texture" id=3]
[ext_resource path="res://Assets/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/START.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.00392157, 0.764706, 0.862745, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.909804, 0.819608, 0.0980392, 1 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../START:custom_styles/normal")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../START:custom_styles/normal:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.909804, 0.819608, 0.0980392, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "buttonflash"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../START:custom_styles/normal:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.909804, 0.819608, 0.0980392, 1 ), Color( 0.00392157, 0.764706, 0.862745, 0.521569 ), Color( 0.909804, 0.819608, 0.0980392, 1 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.00392157, 0.764706, 0.862745, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.909804, 0.819608, 0.0980392, 1 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 4 )

[node name="StartScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="BGContainer" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="BGContainer"]
margin_right = 725.0
margin_bottom = 1297.0
color = Color( 0.00392157, 0.764706, 0.862745, 1 )

[node name="START" type="Button" parent="BGContainer"]
margin_left = 169.0
margin_top = 611.0
margin_right = 569.0
margin_bottom = 711.0
custom_colors/font_color = Color( 0.00392157, 0.764706, 0.862745, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "START"
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BGContainer/START"]
root_node = NodePath("../../Title")
anims/RESET = SubResource( 4 )
anims/buttonflash = SubResource( 5 )

[node name="CREDITS" type="Button" parent="BGContainer"]
margin_left = 219.0
margin_top = 1166.0
margin_right = 619.0
margin_bottom = 1266.0
rect_scale = Vector2( 0.7, 0.7 )
custom_colors/font_color = Color( 0.00392157, 0.764706, 0.862745, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
text = "CREDITS"

[node name="BestScore" type="Label" parent="BGContainer"]
margin_left = 162.0
margin_top = 912.0
margin_right = 570.0
margin_bottom = 952.0
custom_colors/font_color = Color( 0.909804, 0.819608, 0.0980392, 1 )
custom_fonts/font = SubResource( 6 )
text = "Best Score"

[node name="BestScore" type="Label" parent="BGContainer/BestScore"]
margin_left = 132.0
margin_top = 54.0
margin_right = 540.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0.909804, 0.819608, 0.0980392, 1 )
custom_fonts/font = SubResource( 6 )
text = "0"

[node name="Title" type="Sprite" parent="BGContainer"]
position = Vector2( 356, 391 )
scale = Vector2( 1.25, 3 )
texture = ExtResource( 3 )

[node name="74apps" type="Label" parent="BGContainer"]
margin_left = 245.0
margin_top = 1248.0
margin_right = 653.0
margin_bottom = 1288.0
custom_colors/font_color = Color( 0.909804, 0.819608, 0.0980392, 1 )
custom_fonts/font = SubResource( 9 )
text = "74apps.org"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="TitleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="BGContainer/START" to="." method="_on_START_pressed"]
[connection signal="pressed" from="BGContainer/CREDITS" to="." method="_on_CREDITS_pressed"]
[connection signal="timeout" from="TitleTimer" to="." method="_on_TitleTimer_timeout"]
